--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=apps.cwpn1047kfvd.us-east-1.rds.amazonaws.com
+DB_HOST=nodedb.cmwzo4yaixvy.us-east-1.rds.amazonaws.com
 DB_USER=admin
-DB_PASSWORD=12345678
-DB_NAME=aplikasi
+DB_PASSWORD=1234ghjk
+DB_NAME=nodedb
 PORT=3000
